mobile view alignment fixed

--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -107,4 +107,7 @@
     .content{
         align-items: center;
     }
+    .title{
+        text-align: center;
+    }
 }
